<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#F6F5F5"
        tools:context=".EditProfileFragment">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:src="@drawable/user_profile" />

        <EditText
            android:id="@+id/input_your_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="0dp"
            android:background="@drawable/edit_text_border"
            android:padding="15dp"
            android:text="@string/input_your_name"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/input_email_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/input_email_address"
            android:background="@drawable/edit_text_border"
            android:padding="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="0dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"/>

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/input_password"
            android:background="@drawable/edit_text_border"
            android:padding="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="0dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"/>

        <EditText
            android:id="@+id/input_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/input_phone_number"
            android:background="@drawable/edit_text_border"
            android:padding="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="0dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"/>

        <Button
            android:id="@+id/save_changes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Save Changes"
            android:padding="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="0dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center"/>

    </LinearLayout>

</FrameLayout>