<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2D60E3"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    tools:context=".SignUpFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Sign Up Today And"
        android:textAlignment="center"
        android:textColor="#fff"
        android:layout_marginTop="36dp"
        android:textSize="28sp"
        android:fontFamily="@font/josefin_sans_thin"
    />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Discover Your Preferred News!"
        android:textAlignment="center"
        android:textColor="#fff"
        android:fontFamily="@font/josefin_sans_thin"
        android:textSize="28sp"
    />

    <EditText
        android:id="@+id/input_your_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text_border_white"
        android:padding="15dp"
        android:textColor="#fff"
        android:hint="@string/input_your_name"
        android:inputType="text"
        android:textColorHint="#fff"
        android:textSize="20sp" />


    <EditText
        android:id="@+id/input_email_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text_border_white"
        android:padding="15dp"
        android:textColor="#fff"
        android:hint="@string/input_email_address"
        android:textColorHint="#fff"
        android:inputType="textEmailAddress"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text_border_white"
        android:padding="15dp"
        android:textColor="#fff"
        android:hint="@string/input_password"
        android:textColorHint="#fff"
        android:inputType="textPassword"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/input_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text_border_white"
        android:padding="15dp"
        android:textColor="#fff"
        android:hint="@string/input_phone_number"
        android:textColorHint="#fff"
        android:inputType="phone"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/check_terms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:padding="10dp"
        android:text="Terms and Conditions"
        android:textColor="#fff"
        android:textSize="18sp"
        android:layout_marginTop="20dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:background="@color/white"
        android:padding="15dp"
        android:text="Sign Up" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/josefin_sans_thin"
        android:text="━━━━  Or  ━━━━"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="13sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/josefin_sans_thin"
            android:text="Create A New Account: "
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sign_in_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="Sign In" />
    </LinearLayout>

</LinearLayout>

</ScrollView>