<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFF"
    android:padding="32dp">

    <TextView
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/josefin_sans_thin"
        android:text="About UptoDate News"
        android:textColor="#2D60E3"
        android:textFontWeight="900"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:lineHeight="0sp" />

    <TextView
        android:layout_width="348dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="4dp"
        android:text="@string/description_text"
        android:textColor="#000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="0dp"
        android:fontFamily="@font/josefin_sans_thin"
        android:text="Reach Us"
        android:textColor="#2D60E3"
        android:textFontWeight="900"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:lineHeight="23sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal">
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/rounded_border"
            android:clipToOutline="true"
            android:contentDescription="News Background"
            android:cropToPadding="false"
            android:scaleType="centerCrop"
            android:layout_marginTop="13dp"
            android:src="@drawable/dial_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:autoLink="phone"
            android:text="+1 705 777-7777"
            android:textColor="#000"
            android:textFontWeight="900"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:lineHeight="23sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal">
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/rounded_border"
            android:clipToOutline="true"
            android:contentDescription="News Background"
            android:cropToPadding="false"
            android:scaleType="centerCrop"
            android:layout_marginTop="13dp"
            android:src="@drawable/email_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:autoLink="email"
            android:text="UptoDateNews0@hotmail.com"
            android:textColor="#000"
            android:textFontWeight="900"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:lineHeight="23sp" />
    </LinearLayout>
    <TextView
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="0dp"
        android:fontFamily="@font/josefin_sans_thin"
        android:text="Drop Us A Line"
        android:textColor="#2D60E3"
        android:textFontWeight="900"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:lineHeight="23sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="340dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/input_your_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="0dp"
            android:background="@drawable/edit_text_border"
            android:padding="15dp"
            android:textColor="#000"
            android:hint="@string/input_your_name"
            android:textSize="20sp" />


        <EditText
            android:id="@+id/input_email_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="0dp"
            android:background="@drawable/edit_text_border"
            android:padding="15dp"
            android:textColor="#000"
            android:hint="@string/input_email_address"
            android:textSize="20sp"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/input_message"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="0dp"
            android:background="@drawable/edit_text_border"
            android:padding="15dp"
            android:textColor="#000"
            android:layout_gravity="left"
            android:hint="@string/input_message"
            android:textSize="20sp" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="#fff"
            android:text="Send"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />



    </LinearLayout>

</LinearLayout>
</ScrollView>
